# age-setup

./: .gitignore  Cargo.toml  README.md  a
.github/workflows/: rust.yml
benches/: keygen.rs
coverage/: index.html
src/: build.rs  config.rs  errors.rs  generator.rs  keypair.rs  lib.rs  public_key.rs  secret_key.rs  security.rs  validation.rs
src/apis/: build.rs
src/errors/: buildings.rs  mod.rs  security.rs  validation.rs
src/security/: mod.rs  zeroize.rs
src/types/: keypair.rs  mod.rs  public_key.rs  secret_key.rs  validation.rs
tests/: integration_test.rs
